# sunnycore

./: .coverage  .env.example  .gitignore  .roomodes  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMIT_SYSTEM_INTEGRATION_TEST.md  DEPENDENCIES.md  DEPLOYMENT-SUMMARY.md  Instructions.md  LICENSE  PROJECT_CONCLUDER_ENHANCEMENTS.md  PROMPT-ENGINEERING-GUIDE.md  QA-PROMPT-ADVANCEMENT-REC.md  README.md  SUNNYCORE-CI-CD-WORKFLOW.md  TDD_WORKFLOW_MODIFICATIONS.md  WARP.md  ai-api-convertion.md  ai-api.md  ci-report.md  claude.md  deepseek_prompt_optimizer.md  deepseek_v31_prompt_research.md  demo_robustness_testing.py  install.command  install.command.backup  install.py  mcp.json  package.json  performance_test.py  pyproject.toml  roo.sh  settings.json  simple-prompt.md  simulate-ci.sh  sunnycore.sh  task-prompt.md  task3_consistency_report.md  (+2 more)
GUIDE/: Controlled reasoning and phased workflow specification.md  XML agent system specification.md  enforcement-specification.md
GUIDE_CN/: XML 代理指南.md  強制規範文件指南.md  控制式推理以及階段式工作流開發指南.md
agents/: architecture-documenter.md  backend-developer.md  backend-developer:api.md  backend-developer:database.md  backend-developer:infrastructure.md  backend-developer:performance.md  backend-developer:security.md  backend-developer:testing.md  backend-developer_api.md  backend-developer_database.md  backend-developer_infrastructure.md  backend-developer_performance.md  backend-developer_security.md  backend-developer_testing.md  cicd-monitor-agent.md  commit-agent-01.md  commit-agent-02.md  commit-agent-03.md  commit-agent-04.md  commit-agent-05.md  commit-parser-agent.md  compliance-validator-agent.md  document-updater-agent.md  file-classifier.md  frontend-developer.md  frontend-developer:accessibility.md  frontend-developer:framework.md  frontend-developer:performance.md  frontend-developer:testing.md  frontend-developer:ui-ux.md  frontend-developer_accessibility.md  frontend-developer_framework.md  frontend-developer_performance.md  frontend-developer_testing.md  frontend-developer_ui-ux.md  fullstack-developer.md  fullstack-developer:architecture.md  fullstack-developer:devops.md  fullstack-developer:integration.md  fullstack-developer:performance.md  (+27 more)
claude code/: CLAUDE.md  README.md  index.json  settings.json
codex/: AGENTS.md  DEPENDENCIES.md
commands/: cursorspec-claude:dev.md  cursorspec-claude:po.md  cursorspec-claude:qa.md  cursorspec-claude_dev.md  cursorspec-claude_po.md  cursorspec-claude_qa.md  kiro-spec:dev.md  kiro-spec:po.md  kiro-spec:qa.md  sunnycore_architect.md  sunnycore_assistant.md  sunnycore_dev.md  sunnycore_pm.md  sunnycore_po.md  sunnycore_qa.md
config/: AGENTS.md  CLAUDE.md  CURSOR.mdc  security_config.yaml
core/: dev-notes-guide.md  refactor-developer-enforcement.md  task-planner-enforcement.md  task-reviewer-enforcement.md
cursor/: DEPENDENCIES.md  README.md  cursor.mdc  index.json  mcp.json
cursor prompt/: design-example.md  design-generation-optimized.md  design-generation.md  developer.md  orchestrator-example.md  planner.md  requirement-example.md  requirement-generation-optimized.md  requirement-generation.md  specs.md  task-example.md  task-generation-optimized.md  task-generation.md
docs/: API_USAGE_EXAMPLES.md  architecture.md  configuration-guide.md  develop-tasks-todo.md  requirements.md  tasks.md
general/: config.yaml
guidelines/: CHIN-ENG-TECHNICAL-VOCABULARY.md  PROMPT-ENGINEERING-GUIDE.md
ide prompt/: specs.md
multi_stage_testing_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
reports/: PROMPT-ENGINEERING-GUIDE-report.md  brownfield-tasks-report.md  brownfield-tasks-review.json  brownfield-tasks_review.json  commiter_review.json  review-report.md  (+40 more)
(+1089 files in other folders)
